--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,7 @@
 <h2>Hello World</h2>
 <p>
-  The time is now: <%= Time.now %>
-  Hola soy una Tarea 1 =)
+  TAREA 1 </br></br></br>
+  Hola soy una Tarea 1 =) </br>
+  </br>
+  Listos para el 7
 </p>
