--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,4 @@
 <h2>Primera Tarea</h2>
 <p>
-  TAREA 1 </br></br></br>
-  Hola soy una Tarea 1 =) </br>
-  </br>
-  Listos para el 7
+  Cambiando algo
 </p>
