--- a/app/views/publications/administrator.html.erb
+++ b/app/views/publications/administrator.html.erb
@@ -1,10 +1,7 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Publications Normal</h1>
+<h1>Publictions Administrator</h1>
 
 <%= link_to 'New Publication', new_publication_path, class: 'btn btn-default' %>
-<%= link_to 'Admin', administrator_path, class: 'btn btn-default' %>
-
+<%= link_to 'Back to normal', publications_path, class: 'btn btn-default' %>
 <table class = "table table-bordered">
   <thead>
     <tr>
@@ -21,8 +18,10 @@
         <td><%= publication.author%></td>
         <td><%= publication.drop  %></td>
         <td><%= truncate(publication.body, length: 1000, separator: ' ') %></td>
-        <td><%= publication.comments.count  %></td>
-        <td><%= link_to 'Show', publication, class: 'btn btn-info'  %></td>
+        <td><%= link_to 'Edit', edit_publication_path(publication), class: 'btn btn-info'  %></td>
+        <td><%= link_to 'Destroy', publication,
+              method: :delete,
+              data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
       </tr>
     <% end %>
   </tbody>
