--- a/app/views/publications/new.html.erb
+++ b/app/views/publications/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', publication: @publication %>
 
-<%= link_to 'Back', publications_path %>
+<%= link_to 'Back', publications_path, class: 'btn btn-default' %>
