--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -11,6 +11,7 @@
       <th>Author</th>
       <th>Drop</th>
       <th>Body</th>
+      <th>Comments</th>
       <th colspan="3"></th>
     </tr>
   </thead>
